; ModuleID = '/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_fmt.c_sdb_anext2.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_fmt.c_sdb_anext2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDB_RS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8**)* @sdb_anext2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sdb_anext2(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @SDB_RS, align 4
  %9 = call i8* @strchr(i8* %7, i32 %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 1
  store i8* %14, i8** %5, align 8
  br label %16

15:                                               ; preds = %2
  store i8* null, i8** %5, align 8
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i8**, i8*** %4, align 8
  %18 = icmp ne i8** %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i8*, i8** %5, align 8
  %21 = load i8**, i8*** %4, align 8
  store i8* %20, i8** %21, align 8
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i8* @strchr(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
